--- a/cherry/src/app/components/camera-control/camera-control.component.scss
+++ b/cherry/src/app/components/camera-control/camera-control.component.scss
@@ -83,7 +83,7 @@ $d-pad-arrow-move: 35%;
 	}
 
 	.presets {
-		height: 75vh;
+		height: 65vh;
 	}
 }
 
